--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* App.css */
+
 .calculator {
   width: 320px;
   background-color: #f2f2f2;
@@ -59,14 +61,27 @@
 }
 
 .App {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-  justify-content: center;
   align-items: center;
   gap: 50px;
 }
-
+/* 
 h1 {
-  text-align: center;
+  text-align: left;
+  justify-content: center;
+} */
+
+/* h2 {
+  justify-content: flex-start;
+  margin-left: 100px;
+} */
+
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: right;
+  justify-content: flex-end;
+  margin-right: 100px;
+  gap: 20%;
+  font-size: 20px;
+  padding: auto;
 }
