--- a/src/components/Quotes.css
+++ b/src/components/Quotes.css
@@ -1,9 +1,12 @@
+/* Quotes.css */
+
 .quote {
   margin: 20px;
   padding: 20px;
   background-color: #f5f5f5;
   border-radius: 5px;
   width: 38%;
+  justify-content: center;
 }
 
 .quote p {
