--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,47 @@
 /* App.css */
 
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #f2f2f2;
+  padding: 30px;
+}
+
+nav {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
 .calculator {
   width: 320px;
-  background-color: #f2f2f2;
+  background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 10px;
   box-sizing: border-box;
-  margin-left: auto;
-  margin-right: 100px;
+  margin-bottom: 20px;
+  justify-content: end;
+  margin-left: 800px;
 }
 
 .display {
@@ -19,19 +52,12 @@
   text-align: right;
   font-size: 24px;
   margin-bottom: 10px;
-  grid-column: span 4;
 }
 
 .keypad {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-}
-
-.row {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
   gap: 10px;
-  background-color: #afacac;
 }
 
 .button {
@@ -60,28 +86,6 @@
   background-color: orange;
 }
 
-.App {
-  align-items: center;
-  gap: 50px;
-}
-
-/*
-h1 {
-  text-align: left;
-  justify-content: center;
-} */
-
-/* h2 {
-  justify-content: flex-start;
-  margin-left: 100px;
-} */
-
-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  margin-right: 100px;
-  gap: 20%;
-  font-size: 20px;
-  padding: 20px;
+.homeTitle {
+  margin-bottom: 35px;
 }
